Fixed Text Fonts and Spacing

--- a/style.css
+++ b/style.css
@@ -10,24 +10,26 @@ body {
   margin-top: 40px;
   padding: 0 40px;
 }
+
+/* About Me Section */
 .content-text h1 {
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 90px;
+  font-weight: 500;
+  font-size: 70px;
   line-height: 1.1;
   margin: 0 0 20px 0;
 }
 .content-text h2 {
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 90px;
+  font-weight: 500;
+  font-size: 70px;
   line-height: 1.1;
   margin: 30px 0 15px 0;
 }
 .content-text h3 {
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-size: 90px;
+  font-weight: 500;
+  font-size: 70px;
   line-height: 1.1;
   margin: 30px 0 15px 0;
 }
@@ -94,7 +96,4 @@ body {
 }
 .navbar li:last-child a {
   margin-right: 0%;
-}
-html {
-  overflow-y: scroll;
 }
